# dioxus-mobile

./: .gitignore  Cargo.toml  LICENCE.md  README.md
crates/dioxus-camera/: Cargo.toml
crates/dioxus-fcm/: Cargo.toml  README.MD  build.rs
crates/dioxus-fcm/ios/: FcmBridge.swift  MainActivity.kt
crates/dioxus-fcm/src/: android.rs  android_artifact.rs  ios.rs  lib.rs
crates/dioxus-fcm/src/android/: build.gradle.kts
crates/dioxus-fcm/src/android/kotlin/: FcmService.kt  MainActivity.kt
crates/dioxus-jwt/: Cargo.toml  Readme.md
crates/dioxus-jwt/src/: client.rs  error.rs  lib.rs  server.rs
crates/dioxus-microphone/: Cargo.toml
crates/dioxus-recorder/: Cargo.toml
crates/dioxus-recorder/src/: lib.rs
test-app/: Cargo.toml  Dioxus.toml  flake.nix
test-app/android/: AndroidManifest.xml
test-app/assets/: google-services.json
test-app/src/: denoise_recorder.rs  main.rs
test-app/src/components/: mod.rs
