[package]
name = "dioxus-jwt"
version = "0.1.0"
edition = "2021"

[features]
default = ["client"]
client = ["dep:dioxus", "dep:dioxus-sdk-storage", "dep:web-time"]
server = ["dep:axum", "dep:http", "dep:tower-layer", "dep:tower-service"]

[dependencies]
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "10.4.0"
thiserror = "2"

dioxus = { workspace = true, optional = true }
# SDK releases track the dioxus line — use the build published against 0.8
dioxus-sdk-storage = { git = "https://github.com/pythonpoet/sdk", branch = "main", optional = true }
web-time = { version = "1", optional = true }

axum = { version = "0.8", optional = true, default-features = false }
http = { version = "1", optional = true }
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }
