[package]
name = "dioxus-recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-channel = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
futures-timer = "3"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.4"
block2 = "0.5"
objc2-av-foundation = { version = "0.3.2", features = ["AVCaptureDevice"] }
# If you're on objc2 0.6, use objc2-av-foundation 0.3 — same API.
